<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@android:drawable/ic_menu_rotate" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_wrapped"
                android:title="ResoNode Wrapped"
                android:icon="@android:drawable/ic_menu_sort_by_size" />
            <item
                android:id="@+id/nav_settings"
                android:title="@string/menu_settings"
                android:icon="@android:drawable/ic_menu_preferences" />
            <item
                android:id="@+id/nav_anime"
                android:icon="@android:drawable/ic_menu_slideshow"
                android:title="@string/menu_anime" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout"
                android:icon="@android:drawable/ic_lock_power_off" />
        </menu>
    </item>
</menu>